Updated filter logic and design in some pages

--- a/GDrinks/GDrinks.Web/Views/Drinks/Index.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Drinks/Index.cshtml
@@ -19,7 +19,7 @@
         @if (Model.CurrentPage > 1)
         {
             <li class="page-item">
-                <a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@Model.PreviousPage" aria-label="Previous">
+                <a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@Model.PreviousPage" asp-route-category="@Model.Category" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
@@ -69,16 +69,16 @@
 
             if (i > 0 && pageNumber - 1 != pagesToShow[i - 1])
             {
-                <li class="page-item @className"><a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@(pagesToShow[i - 1] + 1)">...</a></li>
+                <li class="page-item @className"><a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@(pagesToShow[i - 1] + 1)" asp-route-category="@Model.Category">...</a></li>
             }
 
-            <li class="page-item @className"><a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@pageNumber">@pageNumber</a></li>
+            <li class="page-item @className"><a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@pageNumber" asp-route-category="@Model.Category">@pageNumber</a></li>
         }
 
         @if (Model.CurrentPage < Model.PagesCount)
         {
             <li class="page-item">
-                <a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@Model.NextPage" aria-label="Next">
+                <a class="page-link" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-id="@Model.NextPage" asp-route-category="@Model.Category" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
