--- a/GDrinks/GDrinks.Web/Views/Shared/_Layout.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <title>@ViewData["Title"] - GDrinks</title>
-
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     </environment>
@@ -32,17 +31,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">Drink&Go</a>
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">GDrinks</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         @await Component.InvokeAsync("CategoryMenu")
                         @await Component.InvokeAsync("ShoppingCartSummary")
-                         <li>
-                            <partial name="_LoginPartial" />
-                         </li>
                     </ul>
-                    
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><partial name="_LoginPartial" /></li>
+                    </ul>
                     <form class="navbar-form navbar-right" asp-controller="Drink" asp-action="Search" method="get">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Search for a drink" name="searchString" value="@ViewData["searchString"]">
@@ -58,17 +56,14 @@
             <br />
             <br />
             <br />
-            <br />
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - GDrinks.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - GDrinks - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
