--- a/GDrinks/GDrinks.Web/Views/Shared/_DrinkSummaryPartial.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Shared/_DrinkSummaryPartial.cshtml
@@ -12,7 +12,7 @@
         </div>
         <div class="addToCart text-right">
             <p class="button ">
-                <a class="btn btn-success" id="cartButton" asp-controller="ShoppingCart" asp-action="AddToShoppingCart" asp-route-id="@Model.Id">
+                <a class="btn btn-success" id="cartButton" asp-area="" asp-controller="ShoppingCart" asp-action="Add" asp-route-id="@Model.Id">
                     Add to cart
                 </a>
             </p>
