--- a/GDrinks/GDrinks.Web/Views/Home/Index.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<DrinkServiceModel>
 
+@{
+    ViewData["Title"] = "Home";
+}
+
 <partial name="_CarouselPartial">
 
 <h2>Prefered drinks of the week </h2>
