--- a/GDrinks/GDrinks.Web/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<Category>
 
 <li class="dropdown">
-    <a asp-controller="Drink"
-       asp-action="Index"
-       class="dropdown-toggle" data-toggle="dropdown">Drinks<b class="caret"></b></a>
+    <a asp-area="" asp-controller="Drinks" asp-action="Index" class="dropdown-toggle" data-toggle="dropdown">Drinks<b class="caret"></b></a>
     <ul class="dropdown-menu">
         @foreach (var category in Model)
         {
             <li>
-                <a asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-category="@category.Name">@category.Name</a>
+                <a asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-category="@category.Name" asp-route-id="1">@category.Name</a>
             </li>
         }
         <li class="divider"></li>
