--- a/GDrinks/GDrinks.Web/Views/Shared/_DrinkSummaryPartial.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Shared/_DrinkSummaryPartial.cshtml
@@ -2,7 +2,7 @@
 
 <div class="col-sm-4 col-lg-4 col-md-4">
     <div class="thumbnail">
-        <img src="@Model.ImageThumbnailUrl" style="width:300px;height:300px" />
+        <img src="@Model.ImageThumbnailUrl" style="width:330px;height:330px;margin-top:5px" />
         <div class="caption">
             <h3 class="pull-right">@Model.Price.ToString("c")</h3>
             <h3>
