Added Admin area, added validation on Drink model

--- a/GDrinks/GDrinks.Web/Views/Shared/_Layout.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <link href="~/Content/site.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/dist/css/custom-checkbox-radio.css" rel="stylesheet" />
+
     <title>@ViewData["Title"] - GDrinks</title>
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
