Implemented post action for adding a drink (admin only)

--- a/GDrinks/GDrinks.Web/Areas/Admin/Views/Drinks/Add.cshtml
+++ b/GDrinks/GDrinks.Web/Areas/Admin/Views/Drinks/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model FormDrinkAdminViewModel
+﻿@model DrinkFormViewModel
 
 @{
     ViewData["Title"] = "Add a drink";
@@ -69,5 +69,5 @@
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    <partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
 }
