--- a/GDrinks/GDrinks.Web/Views/Shared/_Layout.cshtml
+++ b/GDrinks/GDrinks.Web/Views/Shared/_Layout.cshtml
@@ -42,6 +42,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.IsInRole(WebConstants.AdministratorRole))
+                        {
+                            <li class="dropdown">
+                                <a data-toggle="dropdown" href="#" class="dropdown-toggle">Admin <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a asp-area="Admin" asp-controller="Drinks" asp-action="Add">Add a drink</a></li>
+                                </ul>
+                            </li>
+                        }
+
                         @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
