--- a/GDrinks/GDrinks.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/GDrinks/GDrinks.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using GDrinks.Web.Areas.Admin.Models.Drinks
+@using GDrinks.Web.Areas.Admin.Models.Orders
+@using GDrinks.Services.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
